# Galaxy-Local-Group

./: .gitignore  LICENSE  README.md  database.toml  galaxy_columns.md  main.py  pyproject.toml  schema.yaml
data/reference/: ParameterList.json  Publications.json  RegimeList.json
data/source/: andromedai.json  andromedaii.json  andromedaiii.json  andromedaix.json  andromedav.json  andromedavi.json  andromedavii.json  andromedax.json  andromedaxi.json  andromedaxii.json  andromedaxiii.json  andromedaxiv.json  andromedaxix.json  andromedaxv.json  andromedaxvi.json  andromedaxvii.json  andromedaxviii.json  andromedaxx.json  andromedaxxi.json  andromedaxxii.json  andromedaxxiii.json  andromedaxxiv.json  andromedaxxix.json  andromedaxxv.json  andromedaxxvi.json  andromedaxxvii.json  andromedaxxviii.json  andromedaxxx.json  andromedaxxxi.json  andromedaxxxii.json  andromedaxxxiii.json  antlia.json  antlia2.json  antliab.json  aquarius.json  aquarius2.json  bootes(1).json  bootes2.json  bootes3.json  bootes4.json  (+104 more)
scripts/: build_db.py  ingest_basic.py
tests/: conftest.py
